Fixed issue where footer was hidden behind video

--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ input:focus {
 }
 
 #footer {
-  padding-top: 0px;
+  padding-top: 50px;
 }
 
 #footer_text {
